Fixed deprecated calls